2009-07-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/lightning/content/imip-bar.js: adapted code to run
	without acl manager, thereby removing dependency on SOGo
	Connector.

2009-07-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: webdav sync: fixed a
	bug that would continuously refresh the inbox.
	Added a patch from Simon Vaillancourt @ Oracle that postpones any
	refresh method prior to an initial delay specified in the
	"calendar.caldav.refresh.initialdelay" setting.
	Fixed the handling of character data, thanks to Simon Vaillancourt.

	* We avoid having view triggering getItems when an "onLoad" or an
	"onEndBatch" notification is received. Instead, we reenable the
	onAddItem, onModifyItem and onDeleteItem callbacks during batch
	mode. This optimization greatly reduces the amount of accesses to
	the cache database and the amount of elements needed to be
	redrawn. (no bugzilla bug report yet)

	* src/calendar/base/src/calCachedCalendar.js: we prevent the
	cached calendar from refreshing at initialization, because the
	registration mechanism must take care of some things beforehand.

	* src/calendar/base/src/calCalendarManager.js: initial cached
	calendars won't have a name, we initialize thus to "" to avoid
	errors during onCalendarAdded callbacks. The registerCalendar
	method set the uncached version in its cache, we fix this to avoid
	further reference errors. We then refresh it.

2009-07-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/lightning/content/imip-bar.js: an exception occurs
	when retrieving itip item containing a recurrence-id without a
	master occurence. The exception is caught and we avoid displaying
	the imip bar at that moment.
	Fixed a case where no user calendars belonging to the user would
	be found.

2009-07-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/providers/composite/calCompositeCalendar.js: