@@ -1,5 +1,9 @@
 2009-07-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* src/calendar/base/content/calendar-multiday-view.xml:
+	deleteItemsFromCalendar fixed to remove occurrences found in the
+	column headers.
+
 	* src/calendar/lightning/content/imip-bar.js: adapted code to run
 	without acl manager, thereby removing dependency on SOGo
 	Connector.
